# ComfyUI-productfix

./: LICENSE  README.md  __init__.py  advanced_sampler.py  node.py  ocr.py  pyproject.toml  requirements.txt  utils.py  vq.py
workflows/: productfix_adapter.json  productfix_text.json
